# keynobi

./: .env.e2e  .env.example  .gitignore  .npmrc  .prettierrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PITCH.md  PLAN.md  README.md  RELEASING.md  SECURITY.md  TASK.md  entities.json  eslint.config.js  index.html  mempalace.yaml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite-plugin-tauri-mock.ts  vite.config.ts
.claude/: CLAUDE.md
.cursor/: mcp.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: BEST_PRACTICES.md  CODE_PATTERN.md  DECISIONS.md  DOMAIN_PATTERNS.md  MCP_SERVER.md  USER_MANUAL.md
docs/plans/: 2026-04-23-filter-group-visual.md
docs/specs/: 2026-04-09-build-panel-production-ready-design.md  2026-04-23-filter-group-visual-design.md
docs/superpowers/plans/: 2026-04-01-mcp-tier1-tools.md  2026-04-02-production-readiness.md  2026-04-06-bump-version-script.md  2026-04-06-lint-warnings-cleanup.md  2026-04-06-memory-monitor.md  2026-04-06-release-automation.md  (+1 more)
e2e/fixtures/: app.ts
e2e/ipc/: build-commands.spec.ts  device-commands.spec.ts  settings-commands.spec.ts
e2e/smoke/: app-loads.spec.ts  build-flow.spec.ts  logcat-flow.spec.ts  onboarding.spec.ts
perf-metrics/: metrics_ba34539.json  metrics_latest.json
release/: README.md  latest.json
scripts/: build-dmg.sh  bump-version.mjs  bump-version.test.mjs  changelog.mjs  changelog.test.mjs  collect-metrics.mjs  release.mjs  release.test.mjs  sync-version.mjs
src/: App.tsx  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: fs_benchmarks.rs  phase2_benchmarks.rs
src-tauri/bindings/: LogEntry.ts  LogLevel.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: build.rs  device.rs  file_system.rs  health.rs  logcat.rs  lsp.rs  mcp.rs  mod.rs  search.rs  settings.rs  studio.rs  telemetry.rs  treesitter.rs  ui_hierarchy.rs  variant.rs
src-tauri/src/models/: build.rs  device.rs  error.rs  file.rs  health.rs  log_entry.rs  logcat.rs  lsp.rs  mod.rs  search.rs  settings.rs  ui_hierarchy.rs  variant.rs
src-tauri/src/services/: adb_manager.rs  app_inspector.rs  build_inspector.rs  build_parser.rs  build_runner.rs  crash_inspector.rs  device_inspector.rs  fs_manager.rs  health_inspector.rs  log_pipeline.rs  log_store.rs  log_stream.rs  logcat.rs  lsp_client.rs  lsp_downloader.rs  lsp_log_file.rs  mcp_activity.rs  mcp_server.rs  mod.rs  monitor.rs  process_manager.rs  search_engine.rs  settings_manager.rs  telemetry_sentry.rs  treesitter.rs  ui_automation.rs  ui_hierarchy.rs  ui_hierarchy_parse.rs  ui_hierarchy_xml_sanitize.rs  variant_manager.rs  workspace_json.rs
src-tauri/src/services/fixtures/: ui_hierarchy_compose.xml  ui_hierarchy_sample.xml
src-tauri/src/utils/: path.rs
src-tauri/tests/: build_integration.rs
src-tauri/tests/fixtures/: mock_gradlew
src-tauri/tests/ipc/: build_commands.rs  mod.rs  settings_commands.rs  tauri_commands.rs
src/bindings/: AdvancedSettings.ts  AndroidSettings.ts  AppError.ts  AppSettings.ts  AppearanceSettings.ts  AvailableSystemImage.ts  AvdInfo.ts  BuildError.ts  BuildErrorSeverity.ts  BuildLine.ts  BuildLineKind.ts  BuildRecord.ts  BuildResult.ts  BuildSettings.ts  BuildStatus.ts  BuildVariant.ts  CodeAction.ts  CompletionItem.ts  CompletionItemKind.ts  Device.ts  DeviceConnectionState.ts  DeviceDefinition.ts  DeviceKind.ts  Diagnostic.ts  DiagnosticSeverity.ts  DownloadProgress.ts  EditorSettings.ts  EntryCategory.ts  FileEdit.ts  FileEvent.ts  FileEventKind.ts  FileKind.ts  FileNode.ts  FilesSettings.ts  HighlightKind.ts  HighlightRange.ts  HoverResult.ts  JavaSettings.ts  Location.ts  LogStats.ts  (+39 more)
src/lib/: action-registry.test.ts  action-registry.ts  ansi-strip.ts  dialogs.ts  file-utils.test.ts  file-utils.ts  fuzzy-match.test.ts  fuzzy-match.ts  keybindings.test.ts  keybindings.ts  logcat-filter-spec.ts  logcat-filter-storage.test.ts  logcat-filter-storage.ts  logcat-follow-tail.test.ts  logcat-follow-tail.ts  logcat-query.test.ts  logcat-query.ts  logcat-suggestions.test.ts  logcat-suggestions.ts  logcat-ui-lines.test.ts  logcat-ui-lines.ts  navigation-history.test.ts  navigation-history.ts  navigation-logger.test.ts  navigation-logger.ts  tauri-api.formatError.test.ts  tauri-api.ts  ui-hierarchy-display.test.ts  ui-hierarchy-display.ts
src/services/: build.service.test.ts  build.service.ts  logcat.service.test.ts  logcat.service.ts  lsp.service.ts  project.service.test.ts  project.service.ts  update.service.test.ts  update.service.ts
src/stores/: build.store.test.ts  build.store.ts  device.store.test.ts  device.store.ts  editor.store.test.ts  editor.store.ts  health.store.ts  layoutViewer.store.ts  log.store.ts  logcat.store.test.ts  logcat.store.ts  lsp.store.test.ts  lsp.store.ts  mcp.store.ts  monitor.store.ts  onboarding.store.test.ts  onboarding.store.ts  project.store.test.ts  project.store.ts  projects.store.ts  references.store.ts  search.store.test.ts  search.store.ts  settings.store.test.ts  settings.store.ts  ui.store.test.ts  ui.store.ts  variant.loadVariants.test.ts  variant.store.test.ts  variant.store.ts
src/styles/: global.css  theme.css
src/test/: setup.ts
src/utils/: clipboard.test.ts  clipboard.ts  debounce.test.ts  debounce.ts
(+222 files in other folders)
