[package]
name = "android-ide"
version = "0.1.0"
description = "AI-First Android Development Environment"
authors = []
edition = "2021"

[lib]
name = "android_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# File watching: notify v6 + full debouncer for proper Created/Modified/Deleted/Renamed events
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-full = "0.3"
# .gitignore-aware directory traversal
ignore = "0.4"
# Move to Trash instead of permanent delete
trash = "5"
# Atomic writes and integration tests
tempfile = "3"
# Typed error handling
thiserror = "2"
# Structured async-aware logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Auto-generate TypeScript interfaces from Rust types
ts-rs = "12"
# Tree-sitter for incremental Kotlin parsing, symbol extraction, fallback navigation
tree-sitter = "0.24"
tree-sitter-kotlin-ng = "1.1"
# ripgrep library crates for fast project-wide text search
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
# HTTP client for downloading Kotlin LSP sidecar
reqwest = { version = "0.12", features = ["stream"] }
# ZIP extraction for LSP sidecar
zip = "2"
# Home directory resolution
dirs = "6"
# Async futures utilities
futures-util = "0.3"

[dev-dependencies]
# Criterion for micro-benchmarks (file-tree, CRUD operations)
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fs_benchmarks"
harness = false

[[bench]]
name = "phase2_benchmarks"
harness = false
