[package]
name = "android-ide"
version = "0.1.0"
description = "AI-First Android Development Environment"
authors = []
edition = "2021"

[lib]
name = "android_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Typed error handling
thiserror = "2"
# Structured async-aware logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Auto-generate TypeScript interfaces from Rust types
ts-rs = "12"
# Home directory resolution (settings, ADB paths)
dirs = "6"
# Timestamps for log entries and build records
chrono = { version = "0.4", features = ["serde"] }
# Async futures utilities
futures-util = "0.3"
# Unix signal (SIGTERM/SIGKILL) support for process cancellation
libc = "0.2"
# Regex for build output parsing
regex = "1"

[dev-dependencies]
# Atomic writes in tests
tempfile = "3"
# Criterion for micro-benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fs_benchmarks"
harness = false
