[package]
name = "keynobi"
version = "0.1.16"
description = "Keynobi - AI-First Android Companion App"
authors = []
edition = "2021"

[lib]
name = "keynobi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Typed error handling
thiserror = "2"
# Structured async-aware logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
# Auto-generate TypeScript interfaces from Rust types
ts-rs = "12"
# Home directory resolution (settings, ADB paths)
dirs = "6"
# Timestamps for log entries and build records
chrono = { version = "0.4", features = ["serde"] }
# Async futures utilities
futures-util = "0.3"
# Unix signal (SIGTERM/SIGKILL) support for process cancellation
libc = "0.2"
# Regex for build output parsing
regex = "1"
# UI Automator hierarchy XML (read-only DOM)
roxmltree = "0.21"
# Stable screen hash for hierarchy snapshots
sha2 = "0.10"
# Official MCP SDK — provides JSON-RPC 2.0 framing, stdio transport, tool macros
rmcp = { version = "1.3.0", features = ["server", "macros", "transport-io", "schemars"] }
# JSON Schema generation for MCP tool input schemas
schemars = "1.2.1"
base64 = "0.22.1"
# Recursive directory walking for source file lookup
walkdir = "2"
# Process memory monitoring (RSS) for the status bar monitor
sysinfo = "0.33"
# Optional Sentry crash reporting (enabled via --features telemetry)
# `transport` is required for HTTPS submission; without it the client is inert.
sentry = { version = "0.47", optional = true, default-features = false, features = ["backtrace", "contexts", "panic", "transport"] }

[features]
telemetry = ["sentry"]

[dev-dependencies]
# Atomic writes in tests
tempfile = "3"
# Criterion for micro-benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fs_benchmarks"
harness = false
